@@ -4,6 +4,7 @@ lintian-brush (0.49) UNRELEASED; urgency=medium
   * Determine secure and browser URLs from Savannah Git URLs; thanks to
     Romain Francoise for the report.
   * Include trailing '.git' in salsa VCS URLs.
+  * Guess bug database from forwarded field in debian patches.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 28 Dec 2019 00:30:23 +0000
 
